infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: fatihsevban/ecommerce-product
---
apiVersion: v1
kind: Service
metadata:
  name: product-srv
spec:
  selector:
    app: product
  type:  ClusterIP
  ports:
    - name: product
      port: 3000
      targetPort: 3000
