infra/k8s/ingress-nginx-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/api/auth/?(.*)"
            backend: 
              service:
                name: auth-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api/product/?(.*)"
            backend: 
              service:
                name: product-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: "/?(.*)"
            backend: 
              service:
                name: frontend-srv
                port:
                  number: 8080
